# puzzles

./: README.md
blackout/: blackout.py
copris/: SlitherLatin.scala  VAMA.scala  VAMAconn.scala
lakes/: Interval.hs  Logic.hs  Main.hs  lakes.cabal
latin/: block.c  latin.c
solve/: .gitignore  ChangeLog.md  LICENSE  package.yaml
solve/src/: Solve.hs
towerdefence/: Main.hs  Tower.hs  stack.yaml  towerdefence.cabal
towerdefence/src/: Puzzles.hs  Tower.hs  TowerIntersect.hs
towerdefence/test/: Main.hs
words/: Makefile  README.md  examples.m  grid.m  solve.m  test.m  unittests.m  util.m  wordplace.m  words.m
