name:                lakes
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Robert Vollmert
maintainer:          rfvollmert@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable lakes
  main-is:             Main.hs
  build-depends:       base >=4.7 && <4.8,
                       sbv >= 4.0
  default-language:    Haskell2010
