cabal-version:       >=1.10

name:                towerdefence
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
--license-file:        LICENSE
author:              Robert Vollmert
maintainer:          rob@vllmrt.net
-- copyright:
-- category:
build-type:          Simple
--extra-source-files:  CHANGELOG.md

executable towerdefence
  main-is:             Main.hs
  other-modules:       Tower
  build-depends:       base >=4.12 && <4.14,
                       holmes >=0.2 && <0.3
  default-language:    Haskell2010
