cabal-version:       >=1.10

name:                towerdefence
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
--license-file:        LICENSE
author:              Robert Vollmert
maintainer:          rob@vllmrt.net
-- copyright:
-- category:
build-type:          Simple
--extra-source-files:  CHANGELOG.md

executable towerdefence
  main-is:             Main.hs
  build-depends:       base >=4.12 && <4.14,
                       holmes >=0.2 && <0.3,
                       towerdefence
  default-language:    Haskell2010

library
  hs-source-dirs: src
  exposed-modules:     Tower,
                       TowerIntersect
  build-depends:       base >=4.12 && <4.14,
                       hashable >=1.3 && <1.4,
                       holmes >=0.2 && <0.3
  default-language:    Haskell2010

test-suite test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  build-depends:       base >=4.12 && <4.14,
                       hashable >=1.3 && <1.4,
                       holmes >=0.2 && <0.3,
                       hspec >= 2.7 && < 2.8,
                       towerdefence
  default-language:    Haskell2010
